# sleap-viz

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: README.md  advanced_batch_export.py  basic_usage.py  batch_export.py  custom_visualization.py  notebook_usage.py  programmatic_control.py  test_examples.py
notes/: 01-goals-and-overview.md  02-feature-roadmap.md  03-performance-architecture.md  04-core-api.md  05-input-and-ux.md  06-policies-and-edge-cases.md  07-color-system.md  08-timeline-component.md  09-test-plan.md  10-project-structure.md  11-decision-points.md  progress.md  pygfx.md
src/sleap_viz/: __init__.py  annotation_source.py  cli.py  config.py  controller.py  frame_skipper.py  interactive.py  lut.py  notebook.py  offscreen.py  performance.py  picking.py  renderer.py  styles.py  timeline.py  video_source.py
src/sleap_viz/shaders/: __init__.py  picking.wgsl  tone_mapping.wgsl
tests/: conftest.py  test_config.py  test_fixtures.py  test_lut.py  test_offscreen.py  test_smoke.py
